--- a/biodataku.html
+++ b/biodataku.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>praktikum 3</title>
+	<title>mid kakas</title>
 </head>
 <body>
 
@@ -10,6 +10,8 @@
 	<th>Kelas	: C</th>
 	<th>Asal	: Polewali</th>
 	<th>Jurusan	: Teknik Informatika</th>
+
+	<h2>MID KAKAS PERANGKAT LUNAK</h2>
 
 
 </body>
